# A-star-pathfinding-with-SDL

./: CMakeLists.txt  pseudo code pathfinding.txt  run.bat
src/: cell.cpp  game.cpp  input.cpp  main.cpp  pathfinding.cpp
src/header/: cell.h  game.h  input.h  pathfinding.h
